# Todo

./: .gitignore  CMakeLists.txt  waleed.patch
include/model/: modeltodo.h
src/: main.cpp
src/model/: modeltodo.cpp
ui/: CheckedIndicator.qml  InputContainer.qml  InputRecord.qml  PrimaryButton.qml  Style.qml  TasksList.qml  TasksListDelegate.qml  TitleBar.qml  main.qml  qml.qrc
ui/qml/: CheckedIndicator.qml  InputContainer.qml  InputRecord.qml  PrimaryButton.qml  Style.qml  TasksList.qml  TasksListDelegate.qml  TitleBar.qml  main.qml  qml.qrc
